--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,7 +76,7 @@
 
     <link rel="stylesheet" href="/assets/css/main.css" />
     <!-- <link rel="stylesheet" href="/assets/css/custom-style.css" /> -->
-    <link rel="stylesheet" href="/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"/>
+    <!-- <link rel="stylesheet" href="/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"/> -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
     <link rel="stylesheet" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
@@ -93,7 +93,7 @@
     <script src="/assets/bower_components/jquery.easing/jquery.easing.min.js"></script>
     <script src="/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-    <script src="/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
+    <!-- <script src="/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.2/picturefill.min.js"></script>
     <script src="/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="/assets/bower_components/nanobar/nanobar.min.js"></script>
