--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 </script>
 <div class="jumbotron" style="text-align: center;">
     <img class="author-profile-img" src="/assets/img/profile.png" />
-    <p class="jumbotron-heading">Hi, I am {{site.author}}!</p>
+    <p class="jumbotron-heading">{{site.author}}</p>
     <p class="lead" id="typewriteText"></p>
     {% if site.github_username %} {%- include github_follow_button.html -%} {%
       endif %}
