Fix read button and remove unused JS

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -425,6 +425,13 @@ header {
     font-size: 20px;
     text-decoration: none;
 }
+
+
+.blog-card-lik,
+.blog-card-link:hover {
+    text-decoration: none;
+}
+
 .article-card-link,
 .article-card-link:hover {
     text-decoration: none;
