Fix row problem

--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="row ">
+<div class="row m-0">
     <div class="col-lg-4 offset-md-1">
         <div class="card" id="profile-card">
             <a href="/">
