--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,16 @@
     <p> © 2020 Gustavo Salibi. Subscribe via
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
     </p>
+
+    <!-- Favicon -->
+    <link rel="icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico" type="image/gif" sizes="16x16">
+
+    <!-- Netlify CMS -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- Github Button -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 </footer>
