--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,9 +76,8 @@
     <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
     {% endif %}
 
+    <!-- CSS-->
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <!-- <link rel="stylesheet" href="/assets/css/custom-style.css" /> -->
-    <!-- <link rel="stylesheet" href="/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"/> -->
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
     <link rel="stylesheet" type="text/css"
@@ -87,31 +86,20 @@
     <link rel="stylesheet"
         href="/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" />
     <link rel="stylesheet" href="/assets/bower_components/icono/dist/icono.min.css" />
+
     <!-- Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <!-- Favicon -->
-    <link rel="icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico" type="image/gif" sizes="16x16">
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh"
         crossorigin="anonymous"></script>
-    <!-- <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script> -->
+    <script src="/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-    <!-- <script src="/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script> -->
     <script src="/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="/assets/bower_components/typewrite/dist/typewrite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-
-    <!-- Netlify CMS -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-    <!-- Github Button -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
 
     {% if jekyll.environment == "production" %}
 
