--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<div class="row">
+<div class="row m-0">
     <div class="col-lg-6 offset-md-3">
         <div class="card">
             <h1 class="card-title"> Contact Me </h1>
