--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<div class="row" id="blog-post-container">
+<div class="row m-0" id="blog-post-container">
     <div class="col-lg-8 offset-md-2">
         {%- include blog_post_article.html -%}
     </div>
 </div>
-<div class="row">
+<div class="row m-0">
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">About {{site.author}}</div>
