--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 
-<div class="row">
+<div class="row m-0">
     <div class="col-lg-12">
 
         <div id="search-searchbar"></div>
     </div>
 </div>
 <ul>
-    <div class="row">
+    <div class="row m-0">
         <div class="col-lg-12">
 
             <div id="search-hits"></div>
