--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> Swift, Python, C, Java, JavaScript, SQL, HTML5, CSS3</p>
+<p> Git, Linux, Docker, CI, Agile Methodologies </p>
