--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> Swift, Python, C, Java, JavaScript, SQL, HTML5, CSS3</p>
-<p> Git, Linux, Docker, CI, Agile Methodologies </p>
+<p> Swift; Python; C; Java; JavaScript; SQL; HTML5; CSS3.</p>
+<p> Git; Linux; Docker; CI; Agile Methodologies.</p>
