--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -123,7 +123,7 @@ layout: default
                     <h4 class="experience-title">{{ exp.designation }}</h4>
                     <h6 class="experience-info">{{ exp.company_name}}</h6>
                     <p class="experience-desc">{{ exp.description }}</p>
-                    <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p>
+                    <p><a href="https://{{exp.company_url}}" target="_blank">{{ exp.company_url}}</a></p>
                 </div>
             </div>
             {% endif %} {% endfor %}
@@ -142,7 +142,7 @@ layout: default
                     <h4 class="experience-title">{{detail.college_degree }}</h4>
                     <h6 class="experience-info">{{detail.college_name}}</h6>
                     <p class="experience-desc">{{detail.description}}</p>
-                    <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>
+                    <p><a href="https://{{detail.college_url}}" target="_blank">{{ detail.college_url}}</a></p>
                 </div>
             </div>
             {% endif %} {% endfor %}
