Update footer color

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -563,7 +563,7 @@ footer {
     height: 70px;
     text-align: center;
     padding: 20px;
-    background-color: var(--newsletter-background-color);
+    background-color: var(--card-background-color);
     color: var(--main-text-color);
 }
 
