--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="icono-hamburger" id="navbar-hamburger"> </span>
     </button>
-    <a class="navbar-brand" href="/">{{site.title}}</a>
+    <a class="navbar-brand" href="/">{{site.site_title}}</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             {% for i in site.urls %}
