--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -88,25 +88,31 @@ layout: default
         </div>
         {% endif %} {% if site.show_author_project_details == true %}
         <div id="author_projects" class="card">
-            <h1 class="card-title">Projects</h1>
-            <br />
-            {% for project in site.author_project_details %} {% if project.visibility
-      == true %}
-            <div class="row" id="project-card">
-                <div class="col-md-6">
-                    <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}"
-                        class="project-img" />
+            <div id="recent-articles-header">
+                <div id="recent-articles-title">
+                    <h1 class="card-title">Projects</h1>
                 </div>
-                <div class="col-md-4 center">
-                    <h4 class="experience-title">{{ project.project_title }}</h4>
-                    <h6 class="experience-info">{{ project.project_info}}</h6>
-                    <p class="experience-desc">{{ project.project_description }}</p>
-                    <p>
-                        <a class="project-link" href="{{project.project_url}}">{{ project.project_url}}</a>
-                    </p>
+                <div id="recent-articles-show-all">
+                    <a class="btn btn-lg btn-dark" href="/blog"> View All </a>
                 </div>
             </div>
             <br />
+            {% for project in site.author_project_details limit:5 %} {% if project.visibility == true %}
+            <li class="article-card">
+                <a href="{{project.project_url}}" class="article-card-link">
+                    <div id="article-container">
+                        <div id="article-img">
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" width="50px" height="50px" />
+                        </div>
+                        <div id="article-link">
+                            <p class="recent-article-link">{{project.project_title}} <span style="color: #ccc; font-size: 15px;"> -
+                                    <i><time datetime="{{ post.date }}"
+                                            itemprop="datePublished">{{ project.project_year }}</time></i></span>
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </li>
             {% endif %} {% endfor %}
         </div>
         {% endif %} {% if site.show_author_work_experiences == true %}
