Add projects page

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -6,63 +6,25 @@ layout: default
     <div class="col-lg-8 offset-md-1">
         <ul>
             <div class="row m-0">
-                {% for post in paginator.posts %}
-                <div class="card blog-post">
-                    <img class="card-img-top" src="{{site.url}}{{site.baseurl}}{{ post.thumbnail }}"
+                {% if site.show_author_project_details == true %}
+                {% for project in site.author_project_details limit:5 %} {% if project.visibility == true %}
+
+                <div class="card blog-post wrap">
+                    <a href="{{project.project_url}}"></a>
+                    <img class="card-img-top"
+                        src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}"
                         alt="{{ post.title }}">
                     <div class="card-body center">
-                        <h4 class="card-title">{{ post.title }}</h4>
-
-                        <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date: "%b %-d, %Y" }}</h6>
-                        <p class="card-text">{{ post.summary }} </p>
-
-                        <a href="{{ post.url | prepend: site.baseurl }}" class="btn btn-dark btn-lg">Read</a>
+                        <h4 class="card-title">{{ project.project_title }}</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ project.project_year }}</h6>
+                        <p class="card-text">{{ project.project_description }} </p>
                     </div>
                 </div>
-                {% endfor %}
+                {% endif %} {% endfor %} {% endif %}
+
+
             </div>
         </ul>
 
-        <div class="row m-0 center">
-            <!-- Pagination links -->
-            {% if paginator.total_pages > 1 %}
-            <ul class="pagination pagination-sm">
-                {% if paginator.previous_page %}
-                <li class="pagination-link"><a
-                        href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo;</a>
-                </li>
-                {% else %}
-                <li class="pagination-link disabled"><span aria-hidden="true">&laquo;</span></li>
-                {% endif %}
-
-                <li class="pagination-link ><a href=" /blog">First</a></li>
-
-                {% for page in (1..paginator.total_pages) %}
-                {% if page == paginator.page %}
-                <li class="active pagination-link"><a>{{ page }}<span class="sr-only">(current)</span></a></li>
-                {% elsif page == 1 %}
-                <li class="pagination-link"><a href="/blog">{{ page }}</a></li>
-                {% else %}
-                <li class="pagination-link"><a
-                        href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
-                </li>
-                {% endif %}
-                {% endfor %}
-
-                <li class="pagination-link"><a href="/blog/page/{{ paginator.total_pages }}/#/">Last</a></li>
-
-                {% if paginator.next_page %}
-                <li class="pagination-link"><a
-                        href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">&raquo;</a>
-                </li>
-                {% else %}
-                <li class="disabled pagination-link"><span>&raquo;</span></li>
-                {% endif %}
-            </ul>
-            {% endif %}
-        </div>
-
     </div>
-    {%- include blog_sidebar.html -%}
-
 </div>
