--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -241,6 +241,17 @@ h6 {
 a {
     color: var(--link-color) !important;
 }
+
+.wrap{
+    position: relative;
+  }
+  .wrap a{
+    position: absolute;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+  }
 /* Navigation Header */
 header {
     background-color: var(--main-background-color);
