--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -316,6 +316,11 @@ header {
     height: auto;
     margin: 15px;
 }
+
+.img-project {
+    max-width: 100%;
+}
+
 #search-icon {
     color: var(--search-color) !important;
 }
@@ -461,6 +466,9 @@ header {
 @media (min-width: 768px) {
     .offset-md-1 {
         margin-left: 3.333333% !important;
+    }
+    .img-project {
+        max-width: 40%;
     }
     // #topNav{
     //     padding-left: 100px;
