--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -250,6 +250,16 @@ article p {
     text-indent: 20px;
 }
 
+.center {
+    text-indent: 0px;
+    text-align: center;
+}
+
+.right {
+    text-indent: 0px;
+    text-align: right;
+}
+
 article hr {
     border-top: 1px solid var(--underline-color);
 }
