--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -369,7 +369,7 @@ header {
 /* jumbotron */
 .jumbotron {
     background-color: var(--main-background-color) !important;
-    background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+    background-image: url("/assets/img/background.gif");
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
