--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,13 @@
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171557268-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-171557268-1');
+    </script>
     <meta charset="utf-8">
     <title>{% if {page.title %}{{ page.title }}{% else %}{{ site.title }} - {{ site.subtitle }}{% endif %}</title>
     <meta http-equip="X-UA-Compatible" content="IE=edge">
